--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/ethmimo/mimo-ql#readme",
   "dependencies": {
-    "graphql-yoga": "^1.16.9"
+    "eth-crypto": "^1.3.2",
+    "graphql-yoga": "^1.16.9",
+    "ipfs": "^0.33.1",
+    "orbit-db": "^0.19.9"
   }
 }
