--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Mimo GraphQL Starter Kit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/index",
+    "forever": "./node_modules/.bin/nodemon ./src/index",
+    "test": "./node_modules/.bin/mocha --timeout 1000000 --reporter spec --exit"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,13 @@
     "eth-crypto": "^1.3.2",
     "graphql-yoga": "^1.16.9",
     "ipfs": "^0.33.1",
+    "merge-graphql-schemas": "^1.5.8",
     "orbit-db": "^0.19.9"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9"
   }
 }
