--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ethmimo/mimo-ql#readme",
   "dependencies": {
     "eth-crypto": "^1.3.2",
+    "ethmimo": "^1.0.2",
     "graphql-yoga": "^1.16.9",
     "ipfs": "^0.33.1",
     "merge-graphql-schemas": "^1.5.8",
